Dashboard project Continued
-Adjusted Color palette a bit to look nicer

-Added in Header elements and text

-Next is the main content of the page

--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">Stuff</div>
+        <div class="header">
+           <div class="topRow">
+            <input type="text" class="search">
+            <div class="name">Justa Shrub</div>
+           </div>
+           <div class="botRow">
+            <div class="intro">
+                <div class="welcome">Hello there,</div>
+                <div class="user">Justa Shrub (@BushyBoi)</div>
+            </div>
+            <button class="nav" id="head">New</button>
+            <button class="nav" id="head">Upload</button>
+            <button class="nav" id="head">Share</button>
+           </div>
+        </div>
 
         <div class="sidebar">
             <div class="title">Dashboard</div>
