Final Stages of Dashboard Project
-Added HTML and CSS for the main content of the page
-Used a grid layout to organize the different div element
-Used flex and grid element within the main grid to organize content
-Added H1 elements to each section in order to display what part of the page the user is looking at
-Had some fun with the text because why not be a little silly
-Still needs Icons and some more polish but ocming together pretty nicely

--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,67 @@
             </div>
         </div>
 
-        <div class="main">content</div>
+        <div class="main"> 
+            <h1 class="section1">Show Your Work!</h1>
+            <div class="content1" id="con">
+                <h2>Project Idea</h2>
+                <p class="filler">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="content2" id="con">
+                <h2>Learing to Code</h2>
+                <p class="filler">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="content3" id="con">
+                <h2>Nonsense Wording</h2>
+                <p class="filler">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="content4" id="con">
+                <h2>What is Filler Content?</h2>
+                <p class="filler">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="content5" id="con">
+                <h2>How do Code?</h2>
+                <p class="filler">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="content6" id="con">
+                <h2>No ideas?</h2>
+                <p class="filler">Just throw in some random text or Lorem Ipsum and you're done! </p>
+            </div>
+            <div class="announcements">
+                <h1 class="section">Announcements</h1>
+                <div class="news">
+                    <h3 class="info">Servers Shutdown</h3>
+                    <p class="info">We're sorry to say that we have failed as a company. Not enough people want filler text apparently</p>
+                </div>
+                <div class="news">
+                    <h3 class="info">Losing Money Fast</h3>
+                    <p class="info">It's getting hard keeping this filler text site up. Too much money wasted and there isnt a high demand for random filler text.</p>
+                </div>
+                <div class="news">
+                    <h3 class="info">Why Did I Go Crypto?</h3>
+                    <p class="info">We shouldn't have bought into that crypto scam selling fake filler text samples. Spent 3k on a JPEG of just Lorem Ipsum.</p>
+                </div>
+            </div>
+            <div class="trending">
+                <h1 class="section">Trending</h1>
+                <div class="acct">
+                    <h3 class="prof">@BushyBoi</h3>
+                    <p class="prof">Justa Shrub</p>
+                </div>
+                <div class="acct">
+                    <h3 class="prof">@notaDIV</h3>
+                    <p class="prof">Ima Div</p>
+                </div>
+                <div class="acct">
+                    <h3 class="prof">@MuscleMan</h3>
+                    <p class="prof">Mitch Sorenstein</p>
+                </div>
+                <div class="acct">
+                    <h3 class="prof">@PirateKing</h3>
+                    <p class="prof">Monkey D. Luffy</p>
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
